--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "nanoid": "^3.3.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1"
   }
